# 5D9

./: .gitignore  CMakeLists.txt  TODO
data/assets/shaders/: gamecard_frag.glsl  gamecard_vert.glsl  selectable_frag.glsl  selectable_vert.glsl
data/config/: gamesdb.json
src/: CMakeLists.txt
src/exe/: CMakeLists.txt
src/exe/countdown/: CMakeLists.txt  appconfig.cpp  appconfig.h  countdownapp.cpp  countdownapp.h  gamecard.cpp  gamecard.h  main.c  main.cpp  selectable.h
src/exe/fivednine/: CMakeLists.txt  appconfig.cpp  carouselselector.cpp  carouselselector.h  eventpump.cpp  eventpump.h  fivednineapp.cpp  fivednineapp.h  gamecard.cpp  gamecard.h  gameinfo.h  main.cpp  selectorevent.h
src/exe/fivednined/: CMakeLists.txt  daemonconfig.cpp  daemonconfig.h  daemonrunner.cpp  daemonrunner.h  launchinfo.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/cli/: cliargument.cpp  cliargument.h  cliargumentparser.cpp  cliargumentparser.h
src/lib/common/ipc/: clientsocket.cpp  clientsocket.h  serversocket.cpp  serversocket.h  socket.cpp  socket.h
src/lib/common/log/: log.cpp  log.h
src/lib/common/memory/: memorystream.h
src/lib/countdown/: CMakeLists.txt
src/lib/countdown/check/: check.h
src/lib/countdown/cli/: cliargument.cpp  cliargument.h  cliargumentparser.cpp  cliargumentparser.h
src/lib/countdown/log/: check.h  log.cpp  log.h
src/lib/fivednine/: CMakeLists.txt
src/lib/protocol/: CMakeLists.txt  message.cpp  message.h  messagereader.cpp  messagereader.h  messagewriter.cpp  messagewriter.h
(+58 files in other folders)
